# finpy

./: README.md  pyproject.toml
context/: PRD.md  TASK.md
src/finpy/: __init__.py  account.py  simulation.py  taxes.py  utils.py
tests/: test_account.py  test_simulation.py  test_taxes.py  test_utils.py
